[package]
name = "solvent"
description = "A simple, fast, multi-threaded, variable-size sudoku solution generator and canonicalizer. Not a solver."
license = "MIT"
repository = "https://github.com/david-fong/solvent"
version = "0.1.0"
authors = ["david-fong <davidfong19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "solvent"
path = "src/main.rs"

[dependencies]
num = "0.4"

[features]

[dev-dependencies]
